--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Advanced HTML homework #1</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" media="(min-width: 567px)" href="css/tablet.css">
-    <link rel="stylesheet" media="(min-width: 992px)" href="css/desktop.css">
+    <link rel="stylesheet" media="(min-width: 769px)" href="css/desktop.css">
+
 </head>
 <body>
 <div class="wrapper">
@@ -74,6 +74,7 @@
                         <img src="img/Group%20(1).png" alt="mail img" class="img-fluid">
                     </div>
                     <div class="contacts-info">
+                        <span class="contacts-item-info">email</span>
                         <span class="contacts-info-item">info@unicorn.com</span>
                     </div>
                 </div>
@@ -82,6 +83,7 @@
                         <img src="img/Group%20(2).png" alt="phone img" class="img-fluid">
                     </div>
                     <div class="contacts-info">
+                        <span class="contacts-item-info">call</span>
                         <span class="contacts-info-item">+38050 777 00 00</span>
                         <span class="contacts-info-item">+38050 777 00 00</span>
                     </div>
@@ -91,6 +93,7 @@
                         <img src="img/placeholder%201.png" alt="placeholder img" class="img-fluid">
                     </div>
                     <div class="contacts-info">
+                        <span class="contacts-item-info">lacation</span>
                         <span class="contacts-info-item">Kiev, Ukraine</span>
                         <span class="contacts-info-item">Minsk, Belarus</span>
                     </div>
